<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common string -->
    <string name="app_name">MiniCat</string>
    <string name="app_description">FanFou App for Android</string>
    <string name="app_version">Version:</string>
    <string name="app_support">Support:</string>
    <string name="app_contact">Contact:</string>
    <string name="search_hint">Search on fanfou.com</string>
    <string name="loading">Loading...</string>

    <!-- error message -->
    <string name="msg_unkonow_error">unkown error, please try again later.</string>
    <string name="msg_connection_error">connection error, please try again later.</string>
    <string name="msg_server_error">api server error, please try again later.</string>

    <!-- crash report text -->
    <string name="crash_toast_text">Ooooops ! I crashed, but a report will be sent to
        fanfou developers to help them fix the issue !
    </string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

    <!-- login page -->
    <string name="login_username_hint">Account/Email/Phone Number</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>

    <!-- register page -->
    <string name="register_nickname_hint">Nickname</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_password_confirm_hint">Password again</string>
    <string name="register_button_text">Signup</string>
    <string name="register_follow_suggestions_text">Follow Recommandations</string>
    <string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>

    <!-- profile text -->
    <string name="profile_timeline">Timeline</string>
    <string name="profile_favorites">Favorites</string>
    <string name="profile_friends">Friends</string>
    <string name="profile_Followers">Followers</string>
    <string name="profile_info_title">Introducation</string>
    <string name="profile_desc_title">Description</string>
    <string name="profile_follow">Follow</string>
    <string name="profile_unfollow">UnFollow</string>
    <string name="profile_send">Send</string>
    <string name="profile_mention">Mention</string>

    <!-- menu text -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_option">Option</string>
    <string name="menu_save">Save</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_home">Back Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_feedback">Feedback</string>

    <!-- page titles -->
    <string name="page_title_home">Home</string>
    <string name="page_title_mention">Mention</string>
    <string name="page_title_public">Public</string>
    <string name="page_title_more">More</string>
    <string name="page_title_about">About</string>
    <string name="page_title_friends">Friends</string>
    <string name="page_title_followers">Followers</string>
    <string name="page_title_favorites">favorites</string>
    <string name="page_title_timeline">Timeline</string>
    <string name="page_title_profile">Profile</string>
    <string name="page_title_status">Status</string>
    <string name="page_title_option">Option</string>
    <string name="page_title_trends">Trends</string>
    <string name="page_title_write">Write</string>
    <string name="page_title_conversation_list">Conversation List</string>
    <string name="page_title_conversation">Conversation</string>
    <string name="page_title_thread">Thread</string>
    <string name="page_title_photo">Photo</string>
    <string name="page_title_draft">Draft Box</string>
    <string name="page_title_modify">Edit Profile</string>

    <!-- messages text -->
    <string name="expand">Click To Expand</string>


    <string name="intent_scheme">fanfouapp</string>
    <string name="intent_host_profile">profile</string>
    <string name="intent_host_search">search</string>
    <string name="intent_host_statuses">statuses</string>

    <string name="drawer_open">菜单打开</string>
    <string name="drawer_close">菜单关闭</string>

    <string name="profile_state_on">(正在关注你)</string>
    <string name="profile_state_off">(没有关注你)</string>

    <string name="footer_click_to_load_text">点击加载更多</string>


    <!-- Options -->
    <string name="option_push_notification_key">option_push_notification_key</string>
    <string name="option_push_notification_title">消息提醒</string>
    <string name="option_push_notification_summary">新私信和@消息提醒</string>

    <string name="option_enable_location_key">option_enable_location_key</string>
    <string name="option_enable_location_title">位置信息</string>
    <string name="option_enable_location_summary">发消息时附带位置信息</string>

    <string name="option_refresh_on_start_key">option_refresh_on_start_key</string>
    <string name="option_refresh_on_start_title">立即刷新</string>
    <string name="option_refresh_on_start_summary">开启界面时更新内容</string>

    <string name="option_actionbar_refresh_button_key">option_actionbar_refresh_button_key</string>
    <string name="option_actionbar_refresh_button_title">标题栏按钮</string>
    <string name="option_actionbar_refresh_button_summary">显示标题栏的刷新按钮</string>

    <string name="option_auto_update_key">option_auto_update_key</string>
    <string name="option_auto_update_title">自动更新</string>
    <string name="option_auto_update_summary">自动检查新版本并提示更新</string>

    <string name="option_license_key">option_license_key</string>
    <string name="option_license_title">开源许可</string>
    <string name="option_license_summary">本应用使用的第三方开源库和文件</string>

    <string name="option_support_account_key">option_support_account_key</string>
    <string name="option_support_account_title">蘑菇饭App</string>
    <string name="option_support_account_summary">联系蘑菇饭技术支持帐号</string>
    <string name="option_support_account_uri">fanfouapp://profile/androidsupport</string>

    <string name="option_project_page_key">option_project_page_key</string>
    <string name="option_project_page_title">项目地址</string>
    <string name="option_project_page_summary">https://github.com/mcxiaoke/minicat</string>

    <string name="option_about_key">option_about_key</string>
    <string name="option_about_title">关于</string>

    <string name="button_update_now">下载更新</string>
    <string name="button_update_later">以后再说</string>
    <string name="menu_write">写消息</string>
    <string name="menu_send_all">发送全部</string>
    <string name="menu_clear_drafts">清空草稿箱</string>
    <string name="menu_follow">添加关注</string>
    <string name="menu_unfollow">取消关注</string>
    <string name="menu_send_dm">发私信</string>
    <string name="menu_open_url">查看网页</string>
    <string name="menu_search_web">搜索饭否</string>
    <string name="menu_copy">复制消息内容</string>
    <string name="menu_web">打开网页</string>
    <string name="menu_send">发送</string>
    <string name="menu_profile">我的资料</string>
    <string name="menu_inbox">收件箱</string>
    <string name="menu_topics">热门话题</string>
    <string name="menu_settings">设置</string>

</resources>