<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_write"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="0"
        app:showAsAction="ifRoom"
        android:title="@string/menu_write" />

    <item
        android:id="@+id/menu_follow"
        android:icon="@drawable/ic_follow_0"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:title="@string/menu_follow" />

    <item
        android:id="@+id/menu_unfollow"
        android:icon="@drawable/ic_follow_1"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:title="@string/menu_unfollow" />

    <item
        android:id="@+id/menu_dm"
        android:icon="@drawable/ic_dm"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:title="@string/menu_send_dm" />

    <item
        android:id="@+id/menu_web"
        android:icon="@drawable/ic_more"
        android:orderInCategory="5"
        app:showAsAction="never"
        android:title="@string/menu_open_url" />


</menu>