<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="18dp">

        <EditText
            android:id="@+id/login_username"
            style="@style/EditText.Login"
            android:hint="@string/login_username_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password"
            style="@style/EditText.Login"
            android:hint="@string/login_password_hint"
            android:imeOptions="actionSend"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_signin"
            style="@style/Button.Login"
            android:text="@string/login_button_text" />
    </LinearLayout>

</RelativeLayout>